--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,21 @@
 {
   "parserOptions": {
-    "ecmaVersion": 12,
+    "ecmaVersion": 11,
     "sourceType": "module",
-    "requireConfigFile": false
+    "requireConfigFile": false,
+    "babelOptions": {
+      "plugins": ["@babel/plugin-syntax-class-properties"]
+    }
   },
+  "parser": "@babel/eslint-parser",
   "env": {
     "es6": true,
     "node": true,
     "jest": true
   },
-  "extends": ["eslint:recommended"],
+  "extends": [
+    "eslint:recommended"
+  ],
   "rules": {
     "no-console": "warn",
     "indent": [
@@ -19,21 +25,58 @@
         "SwitchCase": 1
       }
     ],
-    "quotes": ["error", "single"],
-    "semi": ["error", "always"],
-    "space-in-parens": ["error"],
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "semi": [
+      "error",
+      "always"
+    ],
+    "space-in-parens": [
+      "error"
+    ],
     "space-infix-ops": "error",
-    "object-curly-spacing": ["error", "always"],
+    "object-curly-spacing": [
+      "error",
+      "always"
+    ],
     "comma-spacing": "error",
     "space-before-function-paren": [
       "error",
+      "never"
+    ],
+    "eol-last": [
+      "error",
+      "always"
+    ],
+    "keyword-spacing": [
+      "error",
       {
-        "asyncArrow": "always",
-        "anonymous": "never",
-        "named": "never"
+        "before": true,
+        "after": true,
+        "overrides": {
+          "do": {
+            "after": false
+          },
+          "for": {
+            "after": false
+          },
+          "if": {
+            "after": false
+          },
+          "switch": {
+            "after": false
+          },
+          "while": {
+            "after": false
+          },
+          "catch": {
+            "after": false
+          }
+        }
       }
     ],
-    "eol-last": ["error", "always"],
     "arrow-spacing": ["error", { "before": true, "after": true }],
     "array-bracket-spacing": "error",
     "prefer-const": "error",
